projects/vb6parse/snapshots/syntax/library/statements/load/load_at_module_level.snap
---
source: projects/vb6parse/src/syntax/library/statements/system_interaction/load.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: LoadStatement
      children:
        - kind: LoadKeyword
          text: Load
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: frmMain
    - kind: Newline
      text: "\n"
