projects/vb6parse/snapshots/syntax/library/statements/load/load_preserves_whitespace.snap
---
source: projects/vb6parse/src/syntax/library/statements/system_interaction/load.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: LoadStatement
      children:
        - kind: LoadKeyword
          text: Load
        - kind: Whitespace
          text: "    "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: Form1
    - kind: Whitespace
      text: "    "
    - kind: Newline
      text: "\n"
