projects/vb6parse/snapshots/syntax/library/statements/load/load_with_comment.snap
---
source: projects/vb6parse/src/syntax/library/statements/system_interaction/load.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: LoadStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: LoadKeyword
                  text: Load
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: frmAbout
            - kind: Whitespace
              text: " "
            - kind: EndOfLineComment
              text: "' Show about dialog"
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
